parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    GENERATE_RAYFILES
    TEXTURE
    SAVE_COORDS
    CAMERA
    FOCAL
    WEB
    CO
    SAVE_KNOBS
    TWEEN
    MESH

Grammar

Rule 0     S' -> stuff
Rule 1     stuff -> <empty>
Rule 2     stuff -> statement stuff
Rule 3     statement -> COMMENT
Rule 4     statement -> FRAMES INT
Rule 5     statement -> BASENAME TEXT
Rule 6     statement -> VARY SYMBOL INT INT NUMBER NUMBER
Rule 7     statement -> POP
Rule 8     statement -> PUSH
Rule 9     statement -> SCREEN INT INT
Rule 10    statement -> SCREEN
Rule 11    statement -> SAVE
Rule 12    statement -> SAVE TEXT
Rule 13    statement -> DISPLAY TEXT
Rule 14    statement -> DISPLAY
Rule 15    statement -> SET SYMBOL NUMBER
Rule 16    statement -> SET_KNOBS NUMBER
Rule 17    statement -> SPHERE NUMBER NUMBER NUMBER NUMBER INT INT
Rule 18    statement -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 19    statement -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 20    statement -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
Rule 21    statement -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 22    statement -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 23    statement -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 24    statement -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 25    statement -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 26    statement -> CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 27    statement -> CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 28    statement -> BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 29    statement -> BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 30    statement -> HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 31    statement -> HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 32    statement -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 33    statement -> MOVE NUMBER NUMBER NUMBER
Rule 34    statement -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 35    statement -> SCALE NUMBER NUMBER NUMBER
Rule 36    statement -> ROTATE XYZ NUMBER SYMBOL
Rule 37    statement -> ROTATE XYZ NUMBER
Rule 38    statement -> AMBIENT INT INT INT
Rule 39    statement -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 40    statement -> LIGHT SYMBOL NUMBER NUMBER NUMBER INT INT INT
Rule 41    statement -> SHADING SHADING_TYPE
Rule 42    SYMBOL -> XYZ
Rule 43    SYMBOL -> ID
Rule 44    TEXT -> SYMBOL
Rule 45    TEXT -> STRING
Rule 46    NUMBER -> DOUBLE
Rule 47    NUMBER -> INT

Terminals, with rules where they appear

AMBIENT              : 38
BASENAME             : 5
BEZIER               : 28 29
BOX                  : 23 24
CAMERA               : 
CIRCLE               : 26 27
CO                   : 
COMMENT              : 3
CONSTANTS            : 39
DISPLAY              : 13 14
DOUBLE               : 46
FOCAL                : 
FRAMES               : 4
GENERATE_RAYFILES    : 
HERMITE              : 30 31
ID                   : 43
INT                  : 4 6 6 9 9 17 17 20 20 27 28 30 38 38 38 40 40 40 47
LIGHT                : 40
LINE                 : 25
MESH                 : 
MOVE                 : 32 33
POP                  : 7
PUSH                 : 8
ROTATE               : 36 37
SAVE                 : 11 12
SAVE_COORDS          : 
SAVE_KNOBS           : 
SCALE                : 34 35
SCREEN               : 9 10
SET                  : 15
SET_KNOBS            : 16
SHADING              : 41
SHADING_TYPE         : 41
SPHERE               : 17 18 19
STRING               : 45
TEXTURE              : 
TORUS                : 20 21 22
TWEEN                : 
VARY                 : 6
WEB                  : 
XYZ                  : 36 37 42
error                : 

Nonterminals, with rules where they appear

NUMBER               : 6 6 15 16 17 17 17 17 18 18 18 18 19 19 19 19 20 20 20 20 20 21 21 21 21 21 22 22 22 22 22 23 23 23 23 23 23 24 24 24 24 24 24 25 25 25 25 25 25 26 26 26 26 26 26 26 27 27 27 27 27 27 27 28 28 28 28 28 28 28 28 28 28 28 28 29 29 29 29 29 29 29 29 29 29 29 29 30 30 30 30 30 30 30 30 30 30 30 30 31 31 31 31 31 31 31 31 31 31 31 31 32 32 32 33 33 33 34 34 34 35 35 35 36 37 39 39 39 39 39 39 39 39 39 40 40 40
SYMBOL               : 6 15 19 22 24 32 34 36 39 40 44
TEXT                 : 5 12 13
statement            : 2
stuff                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . stuff
    (1) stuff -> .
    (2) stuff -> . statement stuff
    (3) statement -> . COMMENT
    (4) statement -> . FRAMES INT
    (5) statement -> . BASENAME TEXT
    (6) statement -> . VARY SYMBOL INT INT NUMBER NUMBER
    (7) statement -> . POP
    (8) statement -> . PUSH
    (9) statement -> . SCREEN INT INT
    (10) statement -> . SCREEN
    (11) statement -> . SAVE
    (12) statement -> . SAVE TEXT
    (13) statement -> . DISPLAY TEXT
    (14) statement -> . DISPLAY
    (15) statement -> . SET SYMBOL NUMBER
    (16) statement -> . SET_KNOBS NUMBER
    (17) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER INT INT
    (18) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (19) statement -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (20) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
    (21) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) statement -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (23) statement -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) statement -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (25) statement -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (27) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (28) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (29) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (31) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) statement -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (33) statement -> . MOVE NUMBER NUMBER NUMBER
    (34) statement -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (35) statement -> . SCALE NUMBER NUMBER NUMBER
    (36) statement -> . ROTATE XYZ NUMBER SYMBOL
    (37) statement -> . ROTATE XYZ NUMBER
    (38) statement -> . AMBIENT INT INT INT
    (39) statement -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (40) statement -> . LIGHT SYMBOL NUMBER NUMBER NUMBER INT INT INT
    (41) statement -> . SHADING SHADING_TYPE

    $end            reduce using rule 1 (stuff -> .)
    COMMENT         shift and go to state 9
    FRAMES          shift and go to state 6
    BASENAME        shift and go to state 3
    VARY            shift and go to state 5
    POP             shift and go to state 12
    PUSH            shift and go to state 16
    SCREEN          shift and go to state 18
    SAVE            shift and go to state 26
    DISPLAY         shift and go to state 8
    SET             shift and go to state 10
    SET_KNOBS       shift and go to state 13
    SPHERE          shift and go to state 20
    TORUS           shift and go to state 19
    BOX             shift and go to state 1
    LINE            shift and go to state 7
    CIRCLE          shift and go to state 25
    BEZIER          shift and go to state 22
    HERMITE         shift and go to state 11
    MOVE            shift and go to state 4
    SCALE           shift and go to state 2
    ROTATE          shift and go to state 21
    AMBIENT         shift and go to state 24
    CONSTANTS       shift and go to state 27
    LIGHT           shift and go to state 15
    SHADING         shift and go to state 17

    stuff                          shift and go to state 23
    statement                      shift and go to state 14

state 1

    (23) statement -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) statement -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (46) NUMBER -> . DOUBLE
    (47) NUMBER -> . INT
    (42) SYMBOL -> . XYZ
    (43) SYMBOL -> . ID

    DOUBLE          shift and go to state 29
    INT             shift and go to state 28
    XYZ             shift and go to state 33
    ID              shift and go to state 32

    SYMBOL                         shift and go to state 30
    NUMBER                         shift and go to state 31

state 2

    (34) statement -> SCALE . NUMBER NUMBER NUMBER SYMBOL
    (35) statement -> SCALE . NUMBER NUMBER NUMBER
    (46) NUMBER -> . DOUBLE
    (47) NUMBER -> . INT

    DOUBLE          shift and go to state 29
    INT             shift and go to state 28

    NUMBER                         shift and go to state 34

state 3

    (5) statement -> BASENAME . TEXT
    (44) TEXT -> . SYMBOL
    (45) TEXT -> . STRING
    (42) SYMBOL -> . XYZ
    (43) SYMBOL -> . ID

    STRING          shift and go to state 35
    XYZ             shift and go to state 33
    ID              shift and go to state 32

    TEXT                           shift and go to state 36
    SYMBOL                         shift and go to state 37

state 4

    (32) statement -> MOVE . NUMBER NUMBER NUMBER SYMBOL
    (33) statement -> MOVE . NUMBER NUMBER NUMBER
    (46) NUMBER -> . DOUBLE
    (47) NUMBER -> . INT

    DOUBLE          shift and go to state 29
    INT             shift and go to state 28

    NUMBER                         shift and go to state 38

state 5

    (6) statement -> VARY . SYMBOL INT INT NUMBER NUMBER
    (42) SYMBOL -> . XYZ
    (43) SYMBOL -> . ID

    XYZ             shift and go to state 33
    ID              shift and go to state 32

    SYMBOL                         shift and go to state 39

state 6

    (4) statement -> FRAMES . INT

    INT             shift and go to state 40


state 7

    (25) statement -> LINE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (46) NUMBER -> . DOUBLE
    (47) NUMBER -> . INT

    DOUBLE          shift and go to state 29
    INT             shift and go to state 28

    NUMBER                         shift and go to state 41

state 8

    (13) statement -> DISPLAY . TEXT
    (14) statement -> DISPLAY .
    (44) TEXT -> . SYMBOL
    (45) TEXT -> . STRING
    (42) SYMBOL -> . XYZ
    (43) SYMBOL -> . ID

    COMMENT         reduce using rule 14 (statement -> DISPLAY .)
    FRAMES          reduce using rule 14 (statement -> DISPLAY .)
    BASENAME        reduce using rule 14 (statement -> DISPLAY .)
    VARY            reduce using rule 14 (statement -> DISPLAY .)
    POP             reduce using rule 14 (statement -> DISPLAY .)
    PUSH            reduce using rule 14 (statement -> DISPLAY .)
    SCREEN          reduce using rule 14 (statement -> DISPLAY .)
    SAVE            reduce using rule 14 (statement -> DISPLAY .)
    DISPLAY         reduce using rule 14 (statement -> DISPLAY .)
    SET             reduce using rule 14 (statement -> DISPLAY .)
    SET_KNOBS       reduce using rule 14 (statement -> DISPLAY .)
    SPHERE          reduce using rule 14 (statement -> DISPLAY .)
    TORUS           reduce using rule 14 (statement -> DISPLAY .)
    BOX             reduce using rule 14 (statement -> DISPLAY .)
    LINE            reduce using rule 14 (statement -> DISPLAY .)
    CIRCLE          reduce using rule 14 (statement -> DISPLAY .)
    BEZIER          reduce using rule 14 (statement -> DISPLAY .)
    HERMITE         reduce using rule 14 (statement -> DISPLAY .)
    MOVE            reduce using rule 14 (statement -> DISPLAY .)
    SCALE           reduce using rule 14 (statement -> DISPLAY .)
    ROTATE          reduce using rule 14 (statement -> DISPLAY .)
    AMBIENT         reduce using rule 14 (statement -> DISPLAY .)
    CONSTANTS       reduce using rule 14 (statement -> DISPLAY .)
    LIGHT           reduce using rule 14 (statement -> DISPLAY .)
    SHADING         reduce using rule 14 (statement -> DISPLAY .)
    $end            reduce using rule 14 (statement -> DISPLAY .)
    STRING          shift and go to state 35
    XYZ             shift and go to state 33
    ID              shift and go to state 32

    TEXT                           shift and go to state 42
    SYMBOL                         shift and go to state 37

state 9

    (3) statement -> COMMENT .

    COMMENT         reduce using rule 3 (statement -> COMMENT .)
    FRAMES          reduce using rule 3 (statement -> COMMENT .)
    BASENAME        reduce using rule 3 (statement -> COMMENT .)
    VARY            reduce using rule 3 (statement -> COMMENT .)
    POP             reduce using rule 3 (statement -> COMMENT .)
    PUSH            reduce using rule 3 (statement -> COMMENT .)
    SCREEN          reduce using rule 3 (statement -> COMMENT .)
    SAVE            reduce using rule 3 (statement -> COMMENT .)
    DISPLAY         reduce using rule 3 (statement -> COMMENT .)
    SET             reduce using rule 3 (statement -> COMMENT .)
    SET_KNOBS       reduce using rule 3 (statement -> COMMENT .)
    SPHERE          reduce using rule 3 (statement -> COMMENT .)
    TORUS           reduce using rule 3 (statement -> COMMENT .)
    BOX             reduce using rule 3 (statement -> COMMENT .)
    LINE            reduce using rule 3 (statement -> COMMENT .)
    CIRCLE          reduce using rule 3 (statement -> COMMENT .)
    BEZIER          reduce using rule 3 (statement -> COMMENT .)
    HERMITE         reduce using rule 3 (statement -> COMMENT .)
    MOVE            reduce using rule 3 (statement -> COMMENT .)
    SCALE           reduce using rule 3 (statement -> COMMENT .)
    ROTATE          reduce using rule 3 (statement -> COMMENT .)
    AMBIENT         reduce using rule 3 (statement -> COMMENT .)
    CONSTANTS       reduce using rule 3 (statement -> COMMENT .)
    LIGHT           reduce using rule 3 (statement -> COMMENT .)
    SHADING         reduce using rule 3 (statement -> COMMENT .)
    $end            reduce using rule 3 (statement -> COMMENT .)


state 10

    (15) statement -> SET . SYMBOL NUMBER
    (42) SYMBOL -> . XYZ
    (43) SYMBOL -> . ID

    XYZ             shift and go to state 33
    ID              shift and go to state 32

    SYMBOL                         shift and go to state 43

state 11

    (30) statement -> HERMITE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (31) statement -> HERMITE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (46) NUMBER -> . DOUBLE
    (47) NUMBER -> . INT

    DOUBLE          shift and go to state 29
    INT             shift and go to state 28

    NUMBER                         shift and go to state 44

state 12

    (7) statement -> POP .

    COMMENT         reduce using rule 7 (statement -> POP .)
    FRAMES          reduce using rule 7 (statement -> POP .)
    BASENAME        reduce using rule 7 (statement -> POP .)
    VARY            reduce using rule 7 (statement -> POP .)
    POP             reduce using rule 7 (statement -> POP .)
    PUSH            reduce using rule 7 (statement -> POP .)
    SCREEN          reduce using rule 7 (statement -> POP .)
    SAVE            reduce using rule 7 (statement -> POP .)
    DISPLAY         reduce using rule 7 (statement -> POP .)
    SET             reduce using rule 7 (statement -> POP .)
    SET_KNOBS       reduce using rule 7 (statement -> POP .)
    SPHERE          reduce using rule 7 (statement -> POP .)
    TORUS           reduce using rule 7 (statement -> POP .)
    BOX             reduce using rule 7 (statement -> POP .)
    LINE            reduce using rule 7 (statement -> POP .)
    CIRCLE          reduce using rule 7 (statement -> POP .)
    BEZIER          reduce using rule 7 (statement -> POP .)
    HERMITE         reduce using rule 7 (statement -> POP .)
    MOVE            reduce using rule 7 (statement -> POP .)
    SCALE           reduce using rule 7 (statement -> POP .)
    ROTATE          reduce using rule 7 (statement -> POP .)
    AMBIENT         reduce using rule 7 (statement -> POP .)
    CONSTANTS       reduce using rule 7 (statement -> POP .)
    LIGHT           reduce using rule 7 (statement -> POP .)
    SHADING         reduce using rule 7 (statement -> POP .)
    $end            reduce using rule 7 (statement -> POP .)


state 13

    (16) statement -> SET_KNOBS . NUMBER
    (46) NUMBER -> . DOUBLE
    (47) NUMBER -> . INT

    DOUBLE          shift and go to state 29
    INT             shift and go to state 28

    NUMBER                         shift and go to state 45

state 14

    (2) stuff -> statement . stuff
    (1) stuff -> .
    (2) stuff -> . statement stuff
    (3) statement -> . COMMENT
    (4) statement -> . FRAMES INT
    (5) statement -> . BASENAME TEXT
    (6) statement -> . VARY SYMBOL INT INT NUMBER NUMBER
    (7) statement -> . POP
    (8) statement -> . PUSH
    (9) statement -> . SCREEN INT INT
    (10) statement -> . SCREEN
    (11) statement -> . SAVE
    (12) statement -> . SAVE TEXT
    (13) statement -> . DISPLAY TEXT
    (14) statement -> . DISPLAY
    (15) statement -> . SET SYMBOL NUMBER
    (16) statement -> . SET_KNOBS NUMBER
    (17) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER INT INT
    (18) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (19) statement -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (20) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
    (21) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) statement -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (23) statement -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) statement -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (25) statement -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (27) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (28) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (29) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (31) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) statement -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (33) statement -> . MOVE NUMBER NUMBER NUMBER
    (34) statement -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (35) statement -> . SCALE NUMBER NUMBER NUMBER
    (36) statement -> . ROTATE XYZ NUMBER SYMBOL
    (37) statement -> . ROTATE XYZ NUMBER
    (38) statement -> . AMBIENT INT INT INT
    (39) statement -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (40) statement -> . LIGHT SYMBOL NUMBER NUMBER NUMBER INT INT INT
    (41) statement -> . SHADING SHADING_TYPE

    $end            reduce using rule 1 (stuff -> .)
    COMMENT         shift and go to state 9
    FRAMES          shift and go to state 6
    BASENAME        shift and go to state 3
    VARY            shift and go to state 5
    POP             shift and go to state 12
    PUSH            shift and go to state 16
    SCREEN          shift and go to state 18
    SAVE            shift and go to state 26
    DISPLAY         shift and go to state 8
    SET             shift and go to state 10
    SET_KNOBS       shift and go to state 13
    SPHERE          shift and go to state 20
    TORUS           shift and go to state 19
    BOX             shift and go to state 1
    LINE            shift and go to state 7
    CIRCLE          shift and go to state 25
    BEZIER          shift and go to state 22
    HERMITE         shift and go to state 11
    MOVE            shift and go to state 4
    SCALE           shift and go to state 2
    ROTATE          shift and go to state 21
    AMBIENT         shift and go to state 24
    CONSTANTS       shift and go to state 27
    LIGHT           shift and go to state 15
    SHADING         shift and go to state 17

    stuff                          shift and go to state 46
    statement                      shift and go to state 14

state 15

    (40) statement -> LIGHT . SYMBOL NUMBER NUMBER NUMBER INT INT INT
    (42) SYMBOL -> . XYZ
    (43) SYMBOL -> . ID

    XYZ             shift and go to state 33
    ID              shift and go to state 32

    SYMBOL                         shift and go to state 47

state 16

    (8) statement -> PUSH .

    COMMENT         reduce using rule 8 (statement -> PUSH .)
    FRAMES          reduce using rule 8 (statement -> PUSH .)
    BASENAME        reduce using rule 8 (statement -> PUSH .)
    VARY            reduce using rule 8 (statement -> PUSH .)
    POP             reduce using rule 8 (statement -> PUSH .)
    PUSH            reduce using rule 8 (statement -> PUSH .)
    SCREEN          reduce using rule 8 (statement -> PUSH .)
    SAVE            reduce using rule 8 (statement -> PUSH .)
    DISPLAY         reduce using rule 8 (statement -> PUSH .)
    SET             reduce using rule 8 (statement -> PUSH .)
    SET_KNOBS       reduce using rule 8 (statement -> PUSH .)
    SPHERE          reduce using rule 8 (statement -> PUSH .)
    TORUS           reduce using rule 8 (statement -> PUSH .)
    BOX             reduce using rule 8 (statement -> PUSH .)
    LINE            reduce using rule 8 (statement -> PUSH .)
    CIRCLE          reduce using rule 8 (statement -> PUSH .)
    BEZIER          reduce using rule 8 (statement -> PUSH .)
    HERMITE         reduce using rule 8 (statement -> PUSH .)
    MOVE            reduce using rule 8 (statement -> PUSH .)
    SCALE           reduce using rule 8 (statement -> PUSH .)
    ROTATE          reduce using rule 8 (statement -> PUSH .)
    AMBIENT         reduce using rule 8 (statement -> PUSH .)
    CONSTANTS       reduce using rule 8 (statement -> PUSH .)
    LIGHT           reduce using rule 8 (statement -> PUSH .)
    SHADING         reduce using rule 8 (statement -> PUSH .)
    $end            reduce using rule 8 (statement -> PUSH .)


state 17

    (41) statement -> SHADING . SHADING_TYPE

    SHADING_TYPE    shift and go to state 48


state 18

    (9) statement -> SCREEN . INT INT
    (10) statement -> SCREEN .

    INT             shift and go to state 49
    COMMENT         reduce using rule 10 (statement -> SCREEN .)
    FRAMES          reduce using rule 10 (statement -> SCREEN .)
    BASENAME        reduce using rule 10 (statement -> SCREEN .)
    VARY            reduce using rule 10 (statement -> SCREEN .)
    POP             reduce using rule 10 (statement -> SCREEN .)
    PUSH            reduce using rule 10 (statement -> SCREEN .)
    SCREEN          reduce using rule 10 (statement -> SCREEN .)
    SAVE            reduce using rule 10 (statement -> SCREEN .)
    DISPLAY         reduce using rule 10 (statement -> SCREEN .)
    SET             reduce using rule 10 (statement -> SCREEN .)
    SET_KNOBS       reduce using rule 10 (statement -> SCREEN .)
    SPHERE          reduce using rule 10 (statement -> SCREEN .)
    TORUS           reduce using rule 10 (statement -> SCREEN .)
    BOX             reduce using rule 10 (statement -> SCREEN .)
    LINE            reduce using rule 10 (statement -> SCREEN .)
    CIRCLE          reduce using rule 10 (statement -> SCREEN .)
    BEZIER          reduce using rule 10 (statement -> SCREEN .)
    HERMITE         reduce using rule 10 (statement -> SCREEN .)
    MOVE            reduce using rule 10 (statement -> SCREEN .)
    SCALE           reduce using rule 10 (statement -> SCREEN .)
    ROTATE          reduce using rule 10 (statement -> SCREEN .)
    AMBIENT         reduce using rule 10 (statement -> SCREEN .)
    CONSTANTS       reduce using rule 10 (statement -> SCREEN .)
    LIGHT           reduce using rule 10 (statement -> SCREEN .)
    SHADING         reduce using rule 10 (statement -> SCREEN .)
    $end            reduce using rule 10 (statement -> SCREEN .)


state 19

    (20) statement -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
    (21) statement -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) statement -> TORUS . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (46) NUMBER -> . DOUBLE
    (47) NUMBER -> . INT
    (42) SYMBOL -> . XYZ
    (43) SYMBOL -> . ID

    DOUBLE          shift and go to state 29
    INT             shift and go to state 28
    XYZ             shift and go to state 33
    ID              shift and go to state 32

    SYMBOL                         shift and go to state 51
    NUMBER                         shift and go to state 50

state 20

    (17) statement -> SPHERE . NUMBER NUMBER NUMBER NUMBER INT INT
    (18) statement -> SPHERE . NUMBER NUMBER NUMBER NUMBER
    (19) statement -> SPHERE . SYMBOL NUMBER NUMBER NUMBER NUMBER
    (46) NUMBER -> . DOUBLE
    (47) NUMBER -> . INT
    (42) SYMBOL -> . XYZ
    (43) SYMBOL -> . ID

    DOUBLE          shift and go to state 29
    INT             shift and go to state 28
    XYZ             shift and go to state 33
    ID              shift and go to state 32

    SYMBOL                         shift and go to state 52
    NUMBER                         shift and go to state 53

state 21

    (36) statement -> ROTATE . XYZ NUMBER SYMBOL
    (37) statement -> ROTATE . XYZ NUMBER

    XYZ             shift and go to state 54


state 22

    (28) statement -> BEZIER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (29) statement -> BEZIER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (46) NUMBER -> . DOUBLE
    (47) NUMBER -> . INT

    DOUBLE          shift and go to state 29
    INT             shift and go to state 28

    NUMBER                         shift and go to state 55

state 23

    (0) S' -> stuff .



state 24

    (38) statement -> AMBIENT . INT INT INT

    INT             shift and go to state 56


state 25

    (26) statement -> CIRCLE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (27) statement -> CIRCLE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (46) NUMBER -> . DOUBLE
    (47) NUMBER -> . INT

    DOUBLE          shift and go to state 29
    INT             shift and go to state 28

    NUMBER                         shift and go to state 57

state 26

    (11) statement -> SAVE .
    (12) statement -> SAVE . TEXT
    (44) TEXT -> . SYMBOL
    (45) TEXT -> . STRING
    (42) SYMBOL -> . XYZ
    (43) SYMBOL -> . ID

    COMMENT         reduce using rule 11 (statement -> SAVE .)
    FRAMES          reduce using rule 11 (statement -> SAVE .)
    BASENAME        reduce using rule 11 (statement -> SAVE .)
    VARY            reduce using rule 11 (statement -> SAVE .)
    POP             reduce using rule 11 (statement -> SAVE .)
    PUSH            reduce using rule 11 (statement -> SAVE .)
    SCREEN          reduce using rule 11 (statement -> SAVE .)
    SAVE            reduce using rule 11 (statement -> SAVE .)
    DISPLAY         reduce using rule 11 (statement -> SAVE .)
    SET             reduce using rule 11 (statement -> SAVE .)
    SET_KNOBS       reduce using rule 11 (statement -> SAVE .)
    SPHERE          reduce using rule 11 (statement -> SAVE .)
    TORUS           reduce using rule 11 (statement -> SAVE .)
    BOX             reduce using rule 11 (statement -> SAVE .)
    LINE            reduce using rule 11 (statement -> SAVE .)
    CIRCLE          reduce using rule 11 (statement -> SAVE .)
    BEZIER          reduce using rule 11 (statement -> SAVE .)
    HERMITE         reduce using rule 11 (statement -> SAVE .)
    MOVE            reduce using rule 11 (statement -> SAVE .)
    SCALE           reduce using rule 11 (statement -> SAVE .)
    ROTATE          reduce using rule 11 (statement -> SAVE .)
    AMBIENT         reduce using rule 11 (statement -> SAVE .)
    CONSTANTS       reduce using rule 11 (statement -> SAVE .)
    LIGHT           reduce using rule 11 (statement -> SAVE .)
    SHADING         reduce using rule 11 (statement -> SAVE .)
    $end            reduce using rule 11 (statement -> SAVE .)
    STRING          shift and go to state 35
    XYZ             shift and go to state 33
    ID              shift and go to state 32

    TEXT                           shift and go to state 58
    SYMBOL                         shift and go to state 37

state 27

    (39) statement -> CONSTANTS . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (42) SYMBOL -> . XYZ
    (43) SYMBOL -> . ID

    XYZ             shift and go to state 33
    ID              shift and go to state 32

    SYMBOL                         shift and go to state 59

state 28

    (47) NUMBER -> INT .
